# EnsembleTR

./: .gitignore  Hipstr_correction.py  README.md  archive_ensembletr_datasets.md  main.py  master-merger.py  preprocess-test.sh  pyproject.toml  pytest.ini  sample_pops.tab  setup.py
ExampleData/: command.sh
callset-qc/: 1000G.ped  1000G_CallerQC_Figures.ipynb  CODIS_afreq.csv  README.md  combine_freqs.py  compile_afreqs.sh  convert_cap.py  generate_afreq.sh  generate_afreqs.sh  get_numalleles.py  load_cap.py  run_cap.sh  run_str_mend.py  snakefile  summarize_mend.sh
callset-qc/scripts/: run_afreq_step.sh
callsetmerger/: callsetmerger.py  mergemodule.py  recordcluster.py  reliability.py  reliability_metrics.py
ensembletr/: callsetmerger.py  main.py  mergemodule.py  recordcluster.py  utils.py  vcfio.py  version.py
ensembletr/ExampleData/: advntr-chr20.vcf.gz.tbi  gangstr-chr20.vcf.gz.tbi
ensembletr/tests/: test_recordcluster.py  test_utils.py
ensembletr/testsupport/: dataloader.py  test_ensembletr.sh
ensembletr/testsupport/ExampleData/: eh-chr20.vcf.gz.tbi  hipstr-chr20.vcf.gz.tbi
ensembletr/testsupport/sample_vcfs/: advntr.chr21.sorted.vcf.gz.tbi  gangstr.chr21.sorted.vcf.gz.tbi  (+1 more)
notebooks/: UpsetPlots-MG.ipynb  debugging.ipynb  graph_score.ipynb  graph_stats.ipynb  graphs.ipynb  upset_plots.ipynb
phasing/: phase.pbs
phasing-test/: PlotAVPR1aHaplotypes.ipynb  fix_switch_error.py  get_phased_rs1rs3.sh  readme.sh
scripts/fix-ref/: README.md  convert_to_bref3.sh  download.sh  fix_ensembletr_snpstr_reference.py
snpstr-haps/: snpstr-haps.py
(+9 files in other folders)
